# azure-sql-langraph-checkpoint-saver

./: .gitignore  README.md  pyproject.toml
benchmarks/: _harness.py  connection_pool.py  correctness.py  db_size.py  history_depth.py  latency.py  payload_scaling.py  pruning.py  run_all.py
benchmarks/results/: FULL_REPORT.json  connection_pool.json  correctness.json  db_size.json  history_depth.json  latency.json  payload_scaling.json  pruning.json
docs/: Azure_SQL_LangGraph_Checkpoint_Benchmarks.docx  CONFLUENCE.md  ENGINEERING_REFERENCE.md  THE_BOOK_Azure_SQL_LangGraph.docx
scripts/: generate_book.py  generate_docx.py
